objects/Notification__c.object
<CustomObject>
    <description>This object captures notification data which allows administrators to schedule system notifications.</description>
    <fields>
        <fullName>Daily_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Denotes if this notification tracking record tracks Daily Attendance or Section Attendance</inlineHelpText>
        <label>Daily Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>This is the date that the notification period ends.</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <description>This field captures the grades that this notification is active for.</description>
        <label>Grade</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PK-3</fullName>
                </value>
                <value>
                    <fullName>PK-4</fullName>
                </value>
                <value>
                    <fullName>Kindergarten</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <description>This is the module that this notification is for.</description>
        <label>Module</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Attendance</fullName>
                </value>
                <value>
                    <fullName>Points</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parental_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does this notification record trigger parental notification?</inlineHelpText>
        <label>Parental Notification?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Picklist_Value__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Status</label>
        <referenceTo>Picklist_Value__c</referenceTo>
        <relationshipLabel>Notifications</relationshipLabel>
        <relationshipName>Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Setup__c</fullName>
        <description>This is a lookup to the setup object that the notifications are for.</description>
        <label>Setup</label>
        <referenceTo>Setup__c</referenceTo>
        <relationshipLabel>Notifications</relationshipLabel>
        <relationshipName>Notifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>This is the date that the notification period starts.</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>Notification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Grade__c</columns>
        <columns>Daily_Tracking__c</columns>
        <columns>Picklist_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Notification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>