objects/Notification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Grade__c</columns>
    <columns>Daily_Tracking__c</columns>
    <columns>Picklist_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>